--- a/templates/student.handlebars
+++ b/templates/student.handlebars
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <a href= '/student'>student</a>
-    <a href="/teacher">teacher</a>
-    <a href="/admin">admin</a>
-
+    
+    <h1>student</h1>
 </body>
-
 </html>
